--- a/sections/experience.tex
+++ b/sections/experience.tex
@@ -7,30 +7,30 @@
     {\textbf{Federato AI}}{Palo Alto, California}
     {Frontend Engineer / Software Engineer}{August 2022 \textendash Present}
 \innerlist{
-    \entry{Developing the web application / interfact for the next generation of \textbf{Artificial Intelligence Software} for \textbf{Insurance Risk Analyzers} using \textbf{React.js, Typescript and Graphql}}
+    \entry{Developing the web application / interface for the next generation of artificial intelligence software based in risk analysis using \textbf{React.js and Typescript}}
+    \entry{Developing the corresponding API using \textbf{Graphql}}
     \entry{Constructing a unique \textbf{React design library} for use within all Federato applications meeting \textbf{modern accessibility standards}}
-    \entry{Communicating with design and UX team to create \textbf{accessible and efficient} interfaces for customers}
 }
 
 \entrybig
 	{\textbf{Facebook / Meta}}{New York, New York}
-	{Fullstack Engineer / Front end Engineer}{January 2022 \textendash April 2022}
+	{Fullstack Engineer / Frontend Engineer}{January 2022 \textendash April 2022}
 \innerlist{
 	\entry{Developed core infrastructure application consisting of many complex graph traversal algorithms from scratch using \textbf{React.js, Recoil and Flow.js}}
-	\entry{Made use of \textbf{virtualized tables} and other advanced front-end techniques}
+	\entry{Made use of \textbf{virtualized tables} and other advanced web development techniques}
 	\entry{Developed back-end services to complement web application using \textbf{PHP / Hack}}
-	\entry{Made unique \textbf{architectural design proposals} to facilitate the execution of \textbf{industry best practices} in complex and obscure algorithms, data structures and UI while maintaining \textbf{accessibility standards}}
+	\entry{Made unique architectural design proposals to facilitate the execution of industry best practices in complex and obscure algorithms, data structures and UI while maintaining \textbf{accessibility standards}}
 }
 
 \entrybig
 	{\textbf{Facebook / Meta}}{New York, New York}
 	{Fullstack Engineer / Frontend Engineer}{January 2021 \textendash April 2021}
 \innerlist{
-	\entry{Created an animated interactive 3D environment on \textbf{React} by using \textbf{Three.js} and \textbf{GSAP} to load and animate an \textbf{Autodesk} \textbf{FBX} file via the \textbf{WebGL} engine}
-	\entry{Contributed to open source Mephisto project: \textbf{\website{github.com/facebookresearch/mephisto}}, a service for \textbf{Amazon MTurk} helping thousands of users crowdsource artificial intelligence data}
-	\entry{Developed unique \textbf{end to end testing framework from scratch} using \textbf{Javascript, Node.js, Jest} and \textbf{Puppeteer} to test monolithic \textbf{Python Flask apps} using fundamental concepts of \textbf{concurrency}}
+	\entry{Created an animated interactive 3D environment on \textbf{React} by using \textbf{Three.js} and \textbf{GSAP} to animate an \textbf{FBX} file via the \textbf{WebGL} engine}
+	\entry{Contributed to the open source Mephisto project: \textbf{\website{github.com/facebookresearch/mephisto}}, a service for \textbf{Amazon MTurk} helping thousands of users crowdsource artificial intelligence data}
+	\entry{Developed unique end to end testing framework from scratch using \textbf{Javascript, Node.js, Jest} and \textbf{Puppeteer} to test monolithic \textbf{Python Flask apps} using concepts of \textbf{concurrency}}
 	\entry{Developed command line interface using the Python \textbf{Click} framework}
-	\entry{Developed a \textbf{fullstack monolithic web application} using \textbf{Flask and React} published as a react template named \textbf{"cra-template-mephisto-review"}}
+	\entry{Developed a \textbf{fullstack monolithic web application} using \textbf{Flask and React} published as a public react template named \textbf{"cra-template-mephisto-review"}}
 	\entry{Upgraded existing \textbf{React hook} published to NPM as \textbf{"mephisto-review-hook"}}
 }
 
@@ -39,17 +39,22 @@
 	{Lead Frontend Engineer / UI Engineer}{May 2020 \textendash December 2020}
 \innerlist{
 	\entry{Lead the founding of Kinme, a buying and selling platform for Canadian real estate services}
-	\entry{Engineered all initial front end facets of the platform \textbf{independently and from scratch} using \textbf{React.js} deployed to an \textbf{Express.js} server with an \textbf{NGINX} proxy on an \textbf{AWS EC2} container}
+	\entry{Engineered all initial frontend facets of the platform independently and from scratch using \textbf{React} deployed to an \textbf{Express} server with an \textbf{NGINX} proxy on an \textbf{AWS EC2} container}
 	\entry{App was built using \textbf{Axios}, \textbf{Redux}, \textbf{React-Router}, and \textbf{Material UI}}
-	\entry{Currently serving a private beta for \textbf{100} or so clients at \website{kinme.ca}}
+	\entry{Currently serving a private beta for 100 or so clients at \website{kinme.ca}}
 }
 
 \entrybig
 	{\textbf{SAP}}{Waterloo, Ontario}
-	{Big Data Tooling Developer (Full Stack Developer) | JavaScript, Java, JUnit, XML}{September 2019 \textendash December 2019}
+	{Big Data Tooling Developer / Full Stack Developer}{September 2019 \textendash December 2019}
+\innerlist{
+    \entry{JavaScript, Java, JUnit, XML}
+}
 
 \entrybig
 	{\textbf{SAP}}{Waterloo, Ontario}
-	{Android SDK Developer | Java, JUnit XML,}{January 2019 \textendash April 2019}
-
+	{Android SDK Developer}{January 2019 \textendash April 2019}
+\innerlist{
+    \entry{Java, JUnit XML}
+}
 }
