--- a/sections/projects.tex
+++ b/sections/projects.tex
@@ -11,7 +11,8 @@ See full list of projects on \url{https://github.com/sghmk12}
 
 \innerlist{
 	\entry{Working part-time as CTO for small startup team creating a logistics management solution for small warehouses in Ontario, Canada}
-	\entry{Working with one customer to develop a \textbf{SAAS} application to process shipment delivery tickets and manage employees}
+	\entry{Trained and managed two summer interns from the University of Waterloo}
+	\entry{Working with one customer to develop the product interface}
 	\entry{Expected to launch MVP in April 2023}
 }
 
