--- a/sections/summary.tex
+++ b/sections/summary.tex
@@ -4,7 +4,7 @@
 \denseouterlist{
 \entry{\textbf{97\% average in University of Waterloo Data Structures and Algorithms:} beating the class median by 20\%}
 \entry{\textbf{Interned twice at Facebook/Meta:} Wrote several important web applications, one of which is used by thousands of Artificial Intelligence researchers, another to maintain application health at Meta}
-\entry{\textbf{Co-founded startup logistics software company:} part-time \textbf{CTO} for a small team building software for small warehouses in Ontario, Canada}
+\entry{\textbf{Co-founded startup logistics software company:} part-time \textbf{CTO} training and managing a small team building software for small warehouses in Ontario, Canada}
 \entry{\textbf{Lead and founding frontend engineer at Kinme Technologies:} Wrote and deployed entire client web app from scratch over the course of 4 months for a startup company in the real-estate field}
 \entry{\textbf{Respected student leader at the University of Waterloo:} performed as the Athletic Director for the Engineering Society and is was the Class Representative of the Computer Engineering Class of 2023}
 }
