--- a/sections/experience.tex
+++ b/sections/experience.tex
@@ -7,7 +7,7 @@
     {\textbf{Federato AI}}{Palo Alto, California}
     {Software Engineer (Frontend Focus)}{August 2022 \textendash Present}
 \innerlist{
-    \entry{Developing the web application / interface for the next generation of artificial intelligence software based in risk analysis using \textbf{React.js and Typescript}}
+    \entry{Developing the web application / interface for the next generation of artificial intelligence insurance software using \textbf{React.js} and \textbf{Typescript}}
     \entry{Developing the corresponding API using \textbf{Graphql}}
     \entry{Constructing a unique \textbf{React design library} for use within all Federato applications meeting \textbf{modern accessibility standards}}
 }
