--- a/sections/projects.tex
+++ b/sections/projects.tex
@@ -10,7 +10,7 @@ See full list of projects on \url{https://github.com/sghmk12}
 \entry{\textbf{Shipsolver: } React / TypeScript, Flask / Python, HTML / CSS}
 
 \innerlist{
-	\entry{Working part-time as CTO for small startup team creating a logistics management solution for small warehouses in Ontario, Canada}
+	\entry{Co-founded a small experimental startup creating logistics management software for small warehouses in Ontario}
 	\entry{Trained and managed two summer interns from the University of Waterloo}
 	\entry{Working with one customer to develop the product interface}
 	\entry{Expected to launch MVP in April 2023}
