--- a/sections/experience.tex
+++ b/sections/experience.tex
@@ -5,7 +5,7 @@
 
 \entrybig
     {\textbf{Federato AI}}{Palo Alto, California}
-    {Software Engineer (Frontend Focus)}{August 2022 \textendash Present}
+    {Software Engineer}{August 2022 \textendash Present}
 \innerlist{
     \entry{Developing the web application / interface for the next generation of artificial intelligence insurance software using \textbf{React.js} and \textbf{Typescript}}
     \entry{Developing the corresponding API using \textbf{Graphql}}
@@ -14,7 +14,7 @@
 
 \entrybig
 	{\textbf{Facebook / Meta}}{New York, New York}
-	{Fullstack Engineer (Frontend Focus)}{January 2022 \textendash April 2022}
+	{Frontend Engineer}{January 2022 \textendash April 2022}
 \innerlist{
 	\entry{Developed core infrastructure application consisting of many complex graph traversal algorithms from scratch using \textbf{React.js, Recoil and Flow.js}}
 	\entry{Made use of \textbf{virtualized tables} and other advanced web development techniques}
@@ -24,7 +24,7 @@
 
 \entrybig
 	{\textbf{Facebook / Meta}}{New York, New York}
-	{Fullstack Engineer (Frontend Focus)}{January 2021 \textendash April 2021}
+	{Frontend Engineer}{January 2021 \textendash April 2021}
 \innerlist{
 	\entry{Created an animated interactive 3D environment on \textbf{React} by using \textbf{Three.js} and \textbf{GSAP} to animate an \textbf{FBX} file via the \textbf{WebGL} engine}
 	\entry{Contributed to the open source Mephisto project: \textbf{\website{github.com/facebookresearch/mephisto}}, a service for \textbf{Amazon MTurk} helping thousands of users crowdsource artificial intelligence data}
@@ -36,7 +36,7 @@
 
 \entrybig
 	{\textbf{Kinme Technologies}}{Toronto, Ontario}
-	{Lead Frontend Engineer / UI Engineer}{May 2020 \textendash December 2020}
+	{Lead Frontend Engineer}{May 2020 \textendash December 2020}
 \innerlist{
 	\entry{Lead the founding of Kinme, a buying and selling platform for Canadian real estate services}
 	\entry{Engineered all initial frontend facets of the platform independently and from scratch using \textbf{React} deployed to an \textbf{Express} server with an \textbf{NGINX} proxy on an \textbf{AWS EC2} container}
