--- a/sections/experience.tex
+++ b/sections/experience.tex
@@ -13,7 +13,7 @@
 }
 
 \entrybig
-	{\textbf{Facebook / Meta}}{New York, New York}
+	{\textbf{Meta}}{New York, New York}
 	{Frontend Engineer}{January 2022 \textendash April 2022}
 \innerlist{
 	\entry{Developed core infrastructure application consisting of many complex graph traversal algorithms from scratch using \textbf{React.js, Recoil and Flow.js}}
@@ -23,7 +23,7 @@
 }
 
 \entrybig
-	{\textbf{Facebook / Meta}}{New York, New York}
+	{\textbf{Facebook}}{New York, New York}
 	{Frontend Engineer}{January 2021 \textendash April 2021}
 \innerlist{
 	\entry{Created an animated interactive 3D environment on \textbf{React} by using \textbf{Three.js} and \textbf{GSAP} to animate an \textbf{FBX} file via the \textbf{WebGL} engine}
